--- a/TicTacToe/app/src/main/res/layout/activity_main.xml
+++ b/TicTacToe/app/src/main/res/layout/activity_main.xml
@@ -1,16 +1,167 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/relative_1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.sharma.tictactoe.MainActivity">
+    tools:context="com.example.sharma.tictactoe.MainActivity"
+    android:padding="5dp">
 
-    <TextView
+    <LinearLayout
+        android:id="@+id/linear_player1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:orientation="horizontal"
+        android:layout_alignParentLeft="true">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Player 1 :"
+            android:textColor="@android:color/holo_blue_dark"/>
+        <TextView
+            android:id="@+id/text_player1_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=" shawon"
+            android:textColor="@android:color/holo_blue_dark"/>
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/linear_player2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_alignParentRight="true">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Player 2 :"
+            android:textColor="@android:color/holo_blue_dark"/>/>
+        <TextView
+            android:id="@+id/text_player2_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=" ahsan"
+            android:textColor="@android:color/holo_blue_dark"/>/>
+    </LinearLayout>
+<TextView
+    android:id="@+id/text_result"
+    android:layout_marginTop="5dp"
+    android:layout_below="@+id/linear_player2"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_centerHorizontal="true"
+    android:text="It's your turn"
+    android:textStyle="italic"
+    android:textColor="@android:color/holo_green_dark"
+    android:background="@drawable/border"
+    android:padding="5dp"
+    />
+
+    <LinearLayout
+        android:id="@+id/linear_1"
+        android:layout_marginTop="10dp"
+        android:layout_below="@id/text_result"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+       android:gravity="center_horizontal">
+
+        <ImageView
+            android:id="@+id/image_1"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="115dp"
+            android:background="@drawable/first_row_first_image_border"
+            android:src="@drawable/default_image"
+            android:padding="1dp"
+           android:scaleType="fitCenter"/>
+        <ImageView
+            android:id="@+id/image_2"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="115dp"
+            android:background="@drawable/first_row_second_image_border"
+            android:src="@drawable/default_image"
+            android:padding="1dp"
+            android:scaleType="fitCenter"/>
+        <ImageView
+            android:id="@+id/image_3"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="115dp"
+            android:background="@drawable/first_row_third_image_border"
+            android:src="@drawable/default_image"
+            android:padding="1dp"
+            android:scaleType="fitCenter"/>
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/linear_2"
+        android:layout_below="@+id/linear_1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center_horizontal">
+        <ImageView
+            android:id="@+id/image_4"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="115dp"
+            android:background="@drawable/second_row_first_image_border"
+            android:src="@drawable/default_image"
+            android:padding="1dp"/>
+        <ImageView
+            android:id="@+id/image_5"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="115dp"
+            android:background="@drawable/second_row_middle_iamge_border"
+           android:src="@drawable/default_image"
+            android:padding="1dp"
+            />
+        <ImageView
+            android:id="@+id/image_6"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="115dp"
+            android:background="@drawable/second_row_third_image_border"
+            android:src="@drawable/default_image"
+            android:padding="1dp"
+            />
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/linear_3"
+        android:layout_below="@+id/linear_2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center_horizontal">
+        <ImageView
+            android:id="@+id/image_7"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="115dp"
+            android:background="@drawable/third_row_first_image_border"
+           android:src="@drawable/default_image"
+            android:padding="1dp"/>
+        <ImageView
+            android:id="@+id/image_8"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="115dp"
+            android:background="@drawable/third_row_second_image_border"
+           android:src="@drawable/default_image"
+            android:padding="1dp"/>
+        <ImageView
+            android:id="@+id/image_9"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="115dp"
+            android:background="@drawable/third_row_third_image_border"
+            android:src="@drawable/default_image"
+            android:padding="1dp"/>
+    </LinearLayout>
 </RelativeLayout>
